--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,19 +1,34 @@
 {
-  "name": "ssafy-sample-pjt-frontend",
-  "author": {
-    "name": "NonceLab",
-    "url": "https://www.noncelab.com/"
+  "name": "frontend",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.5.0",
+    "@mui/material": "^5.5.0",
+    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/react": "^12.1.4",
+    "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.26.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-router": "^6.2.2",
+    "react-router-dom": "^6.2.2",
+    "react-scripts": "5.0.0",
+    "recoil": "^0.6.1",
+    "web-vitals": "^2.1.4"
   },
-  "version": "1.0.0",
-  "private": false,
   "scripts": {
-    "start": "export PORT=3001 && react-scripts start", 
+    "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test"
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
-  "babel": {
-    "presets": [
-      "@babel/preset-react"
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
     ]
   },
   "browserslist": {
@@ -27,45 +42,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "dependencies": {
-    "@emotion/react": "^11.4.1",
-    "@emotion/styled": "^11.3.0",
-    "@iconify/icons-ant-design": "^1.1.0",
-    "@iconify/icons-eva": "^1.1.0",
-    "@iconify/icons-ic": "^1.1.10",
-    "@iconify/react": "^3.0.1",
-    "@mui/lab": "^5.0.0-alpha.47",
-    "@mui/material": "^5.0.0",
-    "@mui/utils": "^5.0.0",
-    "@testing-library/jest-dom": "^5.14.1",
-    "apexcharts": "^3.28.3",
-    "axios": "^0.24.0",
-    "change-case": "^4.1.2",
-    "date-fns": "^2.24.0",
-    "ethereumjs-tx": "^1.3.7",
-    "formik": "^2.2.9",
-    "framer-motion": "^4.1.17",
-    "history": "^5.0.1",
-    "lodash": "^4.17.21",
-    "moment": "^2.29.1",
-    "numeral": "^2.0.6",
-    "prop-types": "^15.7.2",
-    "react": "^17.0.2",
-    "react-apexcharts": "^1.3.9",
-    "react-dom": "^17.0.2",
-    "react-helmet-async": "^1.1.2",
-    "react-router-dom": "^6.0.0-beta.4",
-    "react-scripts": "^4.0.1",
-    "simplebar": "^5.3.5",
-    "simplebar-react": "^2.3.5",
-    "web-vitals": "^2.1.0",
-    "web3": "^1.6.1",
-    "yup": "^0.32.9"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.15.5",
-    "prettier": "^2.4.1"
-  },
-  "proxy": "http://localhost:3000"
+  }
 }
