Fix : [BE] .gitignore application.properties 경로 변경

--- a/.gitignore
+++ b/.gitignore
@@ -691,6 +691,6 @@ gradle-app.setting
 .classpath
 
 # application.properties
-application.properties
+**/application.properties
 
 # End of https://www.toptal.com/developers/gitignore/api/windows,macos,java,solidity,soliditytruffle,react,reactnative,intellij,intellij+iml,intellij+all,visualstudiocode,gradle
