--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "@material-ui/icons": "^4.11.2",
     "@mui/icons-material": "^5.5.0",
     "@mui/material": "^5.5.0",
+    "@mui/styles": "^5.5.1",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
