Feat : [BE] NFT보유내역 조회 및 상세조회 API

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-
+application-mysql.properties
 # Created by https://www.toptal.com/developers/gitignore/api/windows,macos,java,solidity,soliditytruffle,react,reactnative,intellij,intellij+iml,intellij+all,visualstudiocode,gradle
 # Edit at https://www.toptal.com/developers/gitignore?templates=windows,macos,java,solidity,soliditytruffle,react,reactnative,intellij,intellij+iml,intellij+all,visualstudiocode,gradle
 
