Feat : [BE] NFT 상세조회 API

--- a/.gitignore
+++ b/.gitignore
@@ -697,3 +697,4 @@ gradle-app.setting
 backend/src/generated
 *.gz
 backend/src/main/resources/application.properties
+backend/src/main/resources/application.properties
