Feat : [BE] NFT 민팅 API

--- a/.gitignore
+++ b/.gitignore
@@ -698,3 +698,4 @@ backend/src/generated
 *.gz
 backend/src/main/resources/application.properties
 backend/src/main/resources/application.properties
+backend/src/main/resources/application.properties
