--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -24,6 +24,10 @@ plugins {
     id 'org.springframework.boot' version "${springBootVer}"
 }
 
+jar {
+    enabled = false
+}
+
 apply plugin: 'io.spring.dependency-management'
 apply plugin: 'eclipse'
 
@@ -38,7 +42,7 @@ repositories {
 }
 
 group 'com.sawyou'
-version '1.0-SNAPSHOT'
+version '1.0'
 sourceCompatibility = '11'
 
 configurations {
