Fix : [BE] DB 접근 계정 정보 변경

--- a/backend/src/main/resources/application-mysql.properties
+++ b/backend/src/main/resources/application-mysql.properties
@@ -1,2 +1,2 @@
-spring.datasource.hikari.username=root
-spring.datasource.hikari.password=1234
+spring.datasource.hikari.username=ssafy
+spring.datasource.hikari.password=a401ssafy5791
