Fix : [BE] Dockerfile ADD 경로 변경

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,6 +2,6 @@ FROM openjdk:11-jdk
 
 WORKDIR /opt/springboot
 
-ADD ./sawyou-web-project-1.0.jar /opt/springboot/app.jar
+ADD ./build/libs/sawyou-web-project-1.0.jar /opt/springboot/app.jar
 
 ENTRYPOINT ["java","-jar","app.jar"]
