--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,13 +20,22 @@
     "react-material-ui-carousel": "^3.2.0",
     "react-router": "^6.2.2",
     "react-router-dom": "^6.2.2",
-    "react-scripts": "^5.0.0",
+    "react-scripts": "^4.0.3",
     "react-slick": "^0.28.1",
     "react-toastify": "^8.2.0",
     "recoil": "^0.6.1",
+    "recoil-persist": "^4.1.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.3",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "assert": "^2.0.0",
+    "crypto-browserify": "^3.12.0",
+    "eth-lib": "^0.1.29",
+    "os-browserify": "^0.3.0",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "web3": "^1.6.1",
+    "web3-eth-accounts": "^1.6.1"
   },
   "scripts": {
     "start": "react-scripts start",
