--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,11 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "@types/react-swipeable-views-utils": "^0.13.3",
+    "assert": "^2.0.0",
     "axios": "^0.26.1",
+    "crypto-browserify": "^3.12.0",
+    "eth-lib": "^0.1.29",
+    "os-browserify": "^0.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-material-ui-carousel": "^3.2.0",
@@ -26,14 +30,11 @@
     "recoil": "^0.6.1",
     "recoil-persist": "^4.1.0",
     "slick-carousel": "^1.8.1",
-    "styled-components": "^5.3.3",
-    "web-vitals": "^2.1.4",
-    "assert": "^2.0.0",
-    "crypto-browserify": "^3.12.0",
-    "eth-lib": "^0.1.29",
-    "os-browserify": "^0.3.0",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
+    "styled-components": "^5.3.3",
+    "sweetalert2": "^11.4.8",
+    "web-vitals": "^2.1.4",
     "web3": "^1.6.1",
     "web3-eth-accounts": "^1.6.1"
   },
