--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,10 +18,12 @@
     "axios": "^0.26.1",
     "crypto-browserify": "^3.12.0",
     "eth-lib": "^0.1.29",
+    "moment": "^2.29.2",
     "os-browserify": "^0.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-material-ui-carousel": "^3.2.0",
+    "react-moment": "^1.1.2",
     "react-router": "^6.2.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "^4.0.3",
