--- a/smart-contracts/package.json
+++ b/smart-contracts/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "@openzeppelin/contracts": "^4.5.0",
+    "@truffle/hdwallet-provider": "^2.0.4",
     "web3": "^1.6.1"
   }
 }
